--- a/vizwiz2_train.yaml
+++ b/vizwiz2_train.yaml
@@ -2,7 +2,7 @@ model_config:
   topdown_vqa: &topdown_vqa
     model_data_dir: ${env.data_dir}
     losses:
-    - type: logit_bce
+    - type: vizwiz_baseline_loss
     text_embedding:
       embedding_dim: 300
     lstm:
@@ -13,8 +13,9 @@ model_config:
     classifier:
       type: mlp
       params:
-        in_dim: 512
-        out_dim: 3
+        in_dim: 1024
+        out_dim: 2
+        num_layers: 2
 
 dataset_config:
   vizwiz:
@@ -47,7 +48,7 @@ dataset_config:
             max_length: 14
             vocab:
               type: random
-              vocab_file: vizwiz2/extras/vocabs/vocabulary_100k.txt
+              vocab_file: vizwiz2/extras/vocabs/vizwiz_vocab.txt
             preprocessor:
               type: simple_sentence
               params: {}
@@ -58,45 +59,31 @@ dataset_config:
             preprocessor:
               type: simple_word
               params: {}
-            num_answers: 10
-        context_processor:
-          type: fasttext
-          params:
-            max_length: 50
-            model_file: wiki.en.bin
-        ocr_token_processor:
-          type: simple_word
-          params: {}
-        bbox_processor:
-          type: bbox
-          params:
-            max_length: 50
+            num_answers: 1
+
       return_features_info: true
       # Return OCR information
       use_ocr: false
       # Return spatial information of OCR tokens if present
       use_ocr_info: false
+
 optimizer:
   type: adam_w
   params:
-    lr: 5e-5
-    eps: 1e-8
-
-scheduler:
-  type: warmup_linear
-  params:
-    num_warmup_steps: 6000
-    num_training_steps: 60000
+    lr: 0.001
 
 evaluation:
   metrics:
   - vqa_accuracy
+  - vizwiz_baseline_ap
+  - vizwiz_baseline_f1
+  - vizwiz_baseline_rec_f1
+  - vizwiz_baseline_rec_ap
 
 training:
-  batch_size: 1
-  lr_scheduler: true
-  # Don't forget to update schedule_attributes if you update this
-  max_updates: 60000
+  batch_size: 64
+  lr_scheduler: false
+  max_updates: 10000
   early_stop:
     criteria: vizwiz/vqa_accuracy
     minimize: false
